--- a/.github/workflows/daily_chef.yml
+++ b/.github/workflows/daily_chef.yml
@@ -2,8 +2,8 @@ name: Daily Makłowicz Bot
 
 on:
   schedule:
-    - cron: '0 6 * * *' # Codziennie rano
-  workflow_dispatch:    # Przycisk ręcznego uruchamiania
+    - cron: '0 6 * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write       # Zgoda na zapisywanie plików
