--- a/.github/workflows/daily_chef.yml
+++ b/.github/workflows/daily_chef.yml
@@ -3,6 +3,7 @@ name: Daily Makłowicz Bot
 on:
   schedule:
     - cron: '*/5 * * * *'  # Co 5 minut dla testów; zmień na '0 7 * * *' dla uruchamiania codziennie o 7:00
+ workflow_dispatch:
 
 permissions:
   contents: write       # Zgoda na zapisywanie plików
