--- a/.github/workflows/daily_chef.yml
+++ b/.github/workflows/daily_chef.yml
@@ -1,10 +1,10 @@
 name: Daily Makłowicz Bot
 
 on:
-  schedule:
-    - cron: '*/5 * * * *'  # Co 5 minut dla testów; zmień na '0 7 * * *' dla uruchamiania codziennie o 7:00
- workflow_dispatch:
-
+  schedule:             # 2 spacje wcięcia
+    - cron: '*/5 * * * *'
+  workflow_dispatch:    # 2 spacje wcięcia, na tym samym poziomie co 'schedule'
+  
 permissions:
   contents: write       # Zgoda na zapisywanie plików
 
